--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = http://anthony.piratepro.in/css/js/esp/8266/esp-outputs.php" />
+      <title>ESP8266_IOT</title>
+      <meta http-equiv = "refresh" content = "2; url = http://" />
    </head>
    <body>
-      <p>welcome</p>
+      <p>welcome to ESP8266 IOT project </p>
    </body>
 </html>
